Fix bug with ServerAPI.exe
when executes ServerAPI by ServerAPI.exe no longer throw an error

--- a/ServerAPI/ServerAPI.csproj
+++ b/ServerAPI/ServerAPI.csproj
@@ -19,4 +19,13 @@
     <Folder Include="Resources\Images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Database\ShopApiDb.mdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Database\ShopApiDb_log.ldf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
